objects/Reassignment_Log__c.object
<CustomObject>
    <label>Reassignment Log</label>
    <nameField>
        <displayFormat>RLN{0000000}</displayFormat>
        <label>Reassignment Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reassignment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reassignment Logs</relationshipLabel>
        <relationshipName>Reassignment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reassignment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reassignment Logs</relationshipLabel>
        <relationshipName>Reassignment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Owner_Id__c</fullName>
        <label>Old Owner Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassignment_Batch__c</fullName>
        <label>Reassignment Batch</label>
        <referenceTo>Reassignment_Batch__c</referenceTo>
        <relationshipLabel>Reassignment Logs</relationshipLabel>
        <relationshipName>Reassignment_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>